# kalshi_cli

./: .gitignore  LICENSE  README.md  cli.py  get_market.py  get_positions.py  login.py  place_order.py  setup.cfg  setup.py
api_methods/: auth.py  get_all_markets.py  get_all_markets_with_auth.py  get_market.py  get_positions.py  login.py  place_order.py
auth/: auth_methods.py
cli/: cli.py  utils.py
kalshi/: ENVIRONMENT.py  __main__.py  auth_methods.py  cli.py  get_all_markets.py  get_all_markets_with_auth.py  get_market.py  get_positions.py  logger.py  place_order.py  ticker_to_id.py  utils.py
kalshi/sample/: kalshi_sample.py
test/: test_api_calls.py  test_utils.py
test/data/: markets.json
