[metadata]
name = kalshi_cli
version = 0.0.1
author = EllAchE
description = CLI tool for interacting with kalshi api
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/EllAchE/kalshi_cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >=3.6
install_requires =
    requests
    argparse
    logging

[options.package_data]
# todo update these values

[options.entry_points]
console_scripts =
  kalshi = kalshi.cli:main