[metadata]
name = kalshi_cli
version = 0.0.2
author = EllAchE
description = CLI tool for interacting with kalshi api. Supports placing orders and retrieving market order book.
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/EllAchE/kalshi_cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.6

[options.package_data]
# todo update these values

[options.entry_points]
console_scripts =
  kalshi = kalshi.cli:createParsers